--- a/return_card.html
+++ b/return_card.html
@@ -13,11 +13,11 @@
 
     <!-- Шрифты -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Rubik+Mono+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
+
 
     <!-- Скрипты вендоров -->
-    <!-- <script type="text/javascript" src="../js/idle-timer.min.js"></script> -->
     <script type="text/javascript" src="./static/js/vendor/anime.min.js" async="true"></script>
-    <!-- <script type="text/javascript" src="./static/js/out_of_serv.js" async="true"></script> -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
     <!-- Скрипты страницы -->
@@ -35,7 +35,7 @@
     <div class="center-content">
         <div class="content-wrapper">
             <h2 class="appearing-headline js-appearing-headline">Пожалуйста, заберите вашу карту</h2>
-            <h2 class="appearing-headline js-appearing-headline">Please, take your card</h2>
+            <h2 class="appearing-headline js-appearing-headline">Please take your card</h2>
         </div>
     </div>
     </div>
