--- a/home.html
+++ b/home.html
@@ -16,7 +16,6 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Rubik+Mono+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
 
-
     <!-- Скрипты вендоров -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./static/js/vendor/anime.min.js" async="true"></script>
@@ -24,56 +23,56 @@
 
     <!-- Скрипты страницы -->
     <script type="text/javascript" src="./static/js/insert_customer_data.js" async="true"></script>
+    <script type="text/javascript" src="./static/js/translate.js" async="true"></script>
     <script type="text/javascript" src="./static/js/get_cash.js" async="true"></script>
     <script type="text/javascript" src="./static/js/idle_timer.js" async="true"></script>
 </head>
 
 <body class="main-background">
     <a href="#" class="atm-name">ATM-F</a>
-    <a href="return_card.html" class="back-block back-block_return-card">Забрать карту</a>
+    <a data-eng="Card return" href="return_card.html" class="back-block back-block_return-card js-translate">Забрать карту</a>
 
     <img class="watermark-image" src="./static/img/atm.svg">
 
     <div class="content">
         <div class="side-block js-customer-info">
             <div class="info">
-                <div class="info-title js-translate js-greeting">Здравствуйте,</div>
+                <div data-eng="Welcome" class="info-title js-translate">Здравствуйте,</div>
                 <div class="info-value js-cust-name">Иван Иванович</div>
             </div>
 
             <div class="info">
-                <div class="info-title js-translate js-balance">Баланс:</div>
-                <div class="info-value js-account-balance">55 000 руб.</div>
+                <div data-eng="Balance" class="info-title js-translate">Баланс:</div>
+                <div class="info-value js-account-balance">55 000 &#x20bd;</div>
             </div>
 
             <div class="info">
-                <div class="info-title js-translate">Номер карты:</div>
+                <div data-eng="Card number" class="info-title js-translate">Номер карты:</div>
                 <div class="info-value js-card-number"> 12** **** 1234</div>
             </div>
         </div>
 
         <div class="categories-block">
             <div class="categories-row">
-                <a href="get_cash.html" class="category button js-translate js-cash-withdrawal">Снятие наличных</a>
-                <div class="category button js-translate js-deposit">Вклады</div>
+                <a data-eng="Get cash" href="get_cash.html" class="category button js-translate">Снятие наличных</a>
+                <div data-eng="Deposit" class="category button js-translate">Вклады</div>
             </div>
             <div class="categories-row">
-                <div class="category button js-translate js-payments">Платежи</div>
-                <div class="category button js-translate js-my-card">Моя карта</div>
+                <div data-eng="Payments" class="category button js-translate ">Платежи</div>
+                <div data-eng="Credit card" class="category button js-translate">Моя карта</div>
             </div>
             <div class="categories-row">
-                <div class="category button js-translate js-settings">Управление счетом</div>
-                <div class="category button button_dark js-translate js-other">Другое</div>
+                <div data-eng="Account settings" class="category button js-translate">Управление счетом</div>
+                <div data-eng="Other" class="category button button_dark js-translate">Другое</div>
             </div>
             <div class="category-attractive categories-row_separated-60 button button_red js-get-cash" data-cash-amount="500">
-                <span class="quick-cash_amount js-cash-amount">500р.
+                <span class="quick-cash_amount js-cash-amount">500 &#x20bd;
                 </span>
-                <span class="js-translate js-quick-cash">Быстрое снятие</span>
+                <span data-eng="Quick cash" class="js-translate js-quick-cash">Быстрое снятие</span>
                 <div class="category-attractive_arrow"></div>
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
